Fix missing HTML tags in index.ejs

--- a/templates/RoofingAccord126/index.ejs
+++ b/templates/RoofingAccord126/index.ejs
@@ -486,7 +486,7 @@ const applZip    = data.applicant_zip || data.premise_zip || "";
         <div class="cell w5 center">1</div>
         <div class="cell w5 center">2</div>
         <div class="cell w10 center"></div>
-        <div class="cell w15 center"SUB COST</div>
+        <div class="cell w15 center">SUB COST</div>
         <div class="cell w25"></div>
         <div class="cell w10 right num"><%= data.alcohol_sales ? "$" + money(data.alcohol_sales) : "" %></div>
         <div class="cell w5 center"></div>
