Fix footer class in RoofingForm template

--- a/templates/RoofingForm/index.ejs
+++ b/templates/RoofingForm/index.ejs
@@ -745,7 +745,7 @@
 </div>
 
 <!-- Footer Page 6 -->
-<div class="page-footer final">
+<div class="page-footer">
   <strong>Berkley Specialty Insurance Company</strong><br/>
   Email: contactus@berkleyaspire.com<br/>
   Page 6 of 6 | GF0060 08/18
